# lsif-clang

./: Bundled_Ubuntu1804.Dockerfile  CMakeLists.txt
clang-tools-extra/clangd/index/: IndexAction.cpp  SymbolCollector.cpp
clang-tools-extra/lsif-clang/: CMakeLists.txt  LSIFClangMain.cpp
clang/lib/Tooling/: AllTUsExecution.cpp
docs/: install.md
